# tengri-xc

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
server/: .env.example  .gitignore  Cargo.toml  bacon.toml  build.rs
server/crates/tengri-formats/: Cargo.toml
server/crates/tengri-formats/src/: geo_text.rs  ingest.rs  lib.rs  metadata.rs  types.rs
server/crates/tengri-formats/src/compact/: decode.rs  encode.rs  error.rs  hash.rs  mod.rs  types.rs
server/crates/tengri-formats/src/gpx/: parser.rs
server/crates/tengri-formats/src/igc/: decode.rs  encode.rs  error.rs  parser.rs
server/crates/tengri-formats/src/kml/: error.rs  mod.rs  parser.rs
server/crates/tengri-formats/src/kmz/: error.rs  parser.rs
server/crates/tengri-formats/src/tengri/: format.rs
server/crates/tengri-formats/src/window/: detect.rs  mod.rs  viterbi.rs
server/crates/tengri-geo/: Cargo.toml
server/crates/tengri-geo/src/: approx.rs  aspect_ratio.rs  haversine.rs  lib.rs  point_e5.rs  rdp.rs
server/crates/tengri-maps/: Cargo.toml
server/crates/tengri-maps/src/: constants.rs  geo.rs  lib.rs  serve.rs
server/crates/tengri-maps/src/dem/: README.md  bitpack.rs  compress.rs  constants.rs  decompress.rs  dem_export_adapter.rs  error.rs  export.rs  mod.rs  pyramid.rs  resolution.rs  serve.rs  source.rs  tests.rs  tile_file.rs  tree_export.rs  types.rs
server/crates/tengri-maps/src/dir/: decode.rs  imagery_source.rs  mod.rs
server/crates/tengri-maps/src/geo/: mercator.rs  mod.rs  xyz.rs
server/crates/tengri-maps/src/matrix/: mod.rs  raster.rs  resample.rs
server/crates/tengri-maps/src/pmtiles/: constants.rs  dem_source.rs  dem_source_reader.rs  imagery_source.rs  mod.rs  terrarium.rs
server/crates/tengri-maps/src/tif/: error.rs  mod.rs  tif_dem_source_reader.rs  tif_source.rs  types.rs
server/crates/tengri-maps/src/tree/: README.md  blocks.rs  bounds.rs  builder.rs  error.rs  format.rs  index.rs  metadata.rs  mod.rs  reader.rs  size_stream.rs  slot_index.rs  source.rs  writer.rs
server/crates/tengri-maps/src/webp/: decode.rs  encode.rs  mod.rs  peek.rs  pyramid.rs  serve.rs  tree_export.rs  webp_export_adapter.rs
server/crates/tengri-maps/tests/: e2e.rs
server/crates/tengri-scoring/: Cargo.toml
server/crates/tengri-scoring/src/: evaluation.rs  lib.rs  track.rs  types.rs
server/crates/tengri-scoring/src/fai_triangle/: mod.rs  prefilter.rs  tests.rs
server/crates/tengri-scoring/src/free_distance/: mod.rs  route_search.rs  simplify.rs  solver.rs  tests.rs  track.rs  types.rs
server/crates/tengri-scoring/src/free_triangle/: constants.rs  mod.rs  tests.rs
server/crates/tengri-scoring/src/olc_triangle/: evaluator.rs
server/crates/tengri-scoring/src/shared/: mod.rs  simplify.rs
server/crates/tengri-scoring/tests/: e2e.rs
server/data/: gliders.json  hg.aliases.json  hg.json  leo.brands.json  pg.aliases.json  pg.json  sp.json
server/migrations/: 0001_init.sql  0002_users_auth.sql  0003_user_profiles.sql  0004_user_preferences.sql  0005_site_settings.sql  0006_rename_landed_to_landing.sql  0007_flight_timezone_and_points.sql  0008_flight_offset_point_not_null.sql  0009_gliders.sql  0010_gliders_user_id_and_sp_classes.sql  0011_flights_glider_id_nullable.sql  0012_glider_class_unknown.sql  0013_brands_models_user_scoping.sql  0014_drop_gliders_replace_flights_fk.sql  0015_flight_timezone_names.sql  0016_routes.sql  0017_routes_optimal.sql  0018_flights_main_route.sql  0019_routes_scored_ms.sql  0020_scoring_jobs.sql
server/src/: config.rs  error.rs  ids.rs  lib.rs  main.rs  migrate.rs  state.rs  telemetry.rs  validation.rs
server/src/auth/: cookie.rs  extractor.rs  legacy_leonardo.rs  middleware.rs  mod.rs  password.rs  token.rs
server/src/db/: mod.rs  sequence.rs  sql.rs
server/src/db/sql/: binds.rs  insert.rs  mod.rs  select.rs  update.rs  upsert.rs  where_clause.rs
server/src/flight/: assess.rs  backfill.rs  etag.rs  geo_text.rs  ingest.rs  metadata.rs  mod.rs  queue.rs  scoring.rs  store.rs  timezone.rs  types.rs
server/src/flight/compact/: decode.rs  encode.rs  error.rs  hash.rs  mod.rs  types.rs
server/src/flight/gpx/: error.rs  mod.rs  parser.rs
server/src/flight/igc/: encode.rs  mod.rs  parser.rs
server/src/flight/kml/: error.rs  mod.rs  parser.rs
server/src/flight/kmz/: error.rs  mod.rs  parser.rs
server/src/flight/scoring/: README.md  mod.rs  types.rs
server/src/flight/scoring/fai_triangle/: mod.rs  (+10 more)
server/src/flight/tengri/: error.rs  format.rs  mod.rs
server/src/flight/window/: detect.rs  mod.rs
server/src/geo/: approx.rs  aspect_ratio.rs  consts.rs  fcc.rs  haversine.rs  mod.rs  point_degrees.rs  point_e5.rs  rdp.rs
server/src/glider/: import.rs  mod.rs
server/src/routes/: greet.rs  health.rs  mod.rs  site.rs  tracks.rs  tracks_list.rs  tracks_md.rs  tracks_peek.rs  users.rs
server/src/routes/admin/: gliders.rs  mod.rs  site.rs  users.rs
server/src/routes/me/: flights.rs  glider_catalog.rs  gliders.rs  mod.rs  recent_gliders.rs
server/src/site/: dto.rs  mod.rs  store.rs
server/src/user/: create.rs  dto.rs  mod.rs  permissions.rs  preferences.rs  profile.rs  sex.rs  source.rs
server/tests/: auth.rs  flight_compact.rs  flight_igc.rs  flight_tengri.rs  health.rs  router.rs  site.rs  tracks.rs  tracks_list.rs  tracks_md.rs  tracks_peek.rs  users_update.rs
server/tests/common/: mod.rs
(+337 files in other folders)
