[package]
name = "tengri-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
bincode = { version = "2.0", features = ["serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15.7"
flate2 = "1.1.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }
thiserror = "2.0.18"
tokio = { version = "1.52.2", features = ["full"] }
tower-http = { version = "0.6.9", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
