[package]
name = "tengri-server"
version = "0.1.0"
edition = "2024"
# `cargo run` (no --bin) starts the HTTP server. The other binary (`tengri`)
# is a one-shot CLI; reach it explicitly with `cargo run --bin tengri ...`.
default-run = "tengri-server"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
base64 = "0.22.1"
bincode = { version = "2.0", features = ["serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15.7"
encoding_rs = "0.8.35"
flate2 = "1.1.9"
rand = { version = "0.9.2", default-features = false, features = ["std", "std_rng", "thread_rng"] }
roxmltree = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "mysql", "uuid", "chrono", "macros", "migrate"] }
thiserror = "2.0.18"
tokio = { version = "1.52.2", features = ["full"] }
tower-http = { version = "0.6.9", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
twox-hash = { version = "2.1.2", default-features = false, features = ["xxhash3_64"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
zip = { version = "5.1.1", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[dev-dependencies]
http-body-util = "0.1.3"
serial_test = "3.4.0"
tower = { version = "0.5.3", features = ["util"] }
