[package]
name = "tengri-formats"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bincode = { version = "2.0", features = ["serde"] }
bitflags = "2.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
encoding_rs = "0.8.35"
flate2 = "1.1.9"
roxmltree = "0.21.1"
serde = { version = "1.0.228", features = ["derive"] }
tengri-geo = { path = "../tengri-geo" }
thiserror = "2.0.18"
twox-hash = { version = "2.1.2", default-features = false, features = ["xxhash3_64"] }
zip = { version = "5.1.1", default-features = false, features = ["deflate-flate2-zlib-rs"] }
