[package]
name = "tengri-scoring"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", optional = true, default-features = false, features = ["postgres"] }
tengri-geo = { path = "../tengri-geo" }
thiserror = "2.0.18"

[features]
sqlx = ["dep:sqlx"]

[dev-dependencies]
anyhow = "1.0.102"
json5 = "0.4.1"
libtest-mimic = "0.8.1"
serde_json = "1.0.149"
tengri-formats = { path = "../tengri-formats" }
walkdir = "2.5.0"

[[test]]
name = "e2e"
path = "tests/e2e.rs"
harness = false
